--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Bitmaker Photo Gallery</title>
+    <link rel="stylesheet" href="https://necolas.github.io/normalize.css/5.0.0/normalize.css">
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <header>
@@ -14,31 +16,31 @@
       <a href="#">About</a>
     </nav>
     <section>
-      <h2>There are 6 photos</h2>
+      <h2 class="photo-count">There are <a href="#">6</a> photos</h2>
     </section>
     <section>
       <article class="photo-item">
-        <img src="https://picsum.photos/300/500?random=123" alt="">
+        <img src="https://picsum.photos/300/500" alt="">
         <p><a href="edit.html">Edit</a> | <a href="delete.html">Delete</a></p>
       </article>
       <article class="photo-item">
-        <img src="https://picsum.photos/300/500?random=5309" alt="">
+        <img src="https://picsum.photos/300/500" alt="">
         <p><a href="edit.html">Edit</a> | <a href="delete.html">Delete</a></p>
       </article>
       <article class="photo-item">
-        <img src="https://picsum.photos/300/500?random=1111" alt="">
+        <img src="https://picsum.photos/300/500" alt="">
         <p><a href="edit.html">Edit</a> | <a href="delete.html">Delete</a></p>
       </article>
       <article class="photo-item">
-        <img src="https://picsum.photos/300/500?random=9988" alt="">
+        <img src="https://picsum.photos/300/500" alt="">
         <p><a href="edit.html">Edit</a> | <a href="delete.html">Delete</a></p>
       </article>
       <article class="photo-item">
-        <img src="https://picsum.photos/300/500?random=2019" alt="">
+        <img src="https://picsum.photos/300/500" alt="">
         <p><a href="edit.html">Edit</a> | <a href="delete.html">Delete</a></p>
       </article>
       <article class="photo-item">
-        <img src="https://picsum.photos/300/500?random=555" alt="">
+        <img src="https://picsum.photos/300/500" alt="">
         <p><a href="edit.html">Edit</a> | <a href="delete.html">Delete</a></p>
       </article>
     </section>
