final revision, looks pretty similar to the example provided when the browser is the right width

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <section>
       <h2 class="photo-count">There are <a href="#">6</a> photos</h2>
     </section>
-    <section>
+    <section class="photo-section">
       <article class="photo-item">
         <img src="https://picsum.photos/300/500" alt="">
         <p><a href="edit.html">Edit</a> | <a href="delete.html">Delete</a></p>
