added some randomness to the images to make it a bit more exciting

--- a/index.html
+++ b/index.html
@@ -20,27 +20,27 @@
     </section>
     <section class="photo-section">
       <article class="photo-item">
-        <img src="https://picsum.photos/300/500" alt="">
+        <img src="https://picsum.photos/300/500?random=1234" alt="">
         <p><a href="edit.html">Edit</a> | <a href="delete.html">Delete</a></p>
       </article>
       <article class="photo-item">
-        <img src="https://picsum.photos/300/500" alt="">
+        <img src="https://picsum.photos/300/500?random=9988" alt="">
         <p><a href="edit.html">Edit</a> | <a href="delete.html">Delete</a></p>
       </article>
       <article class="photo-item">
-        <img src="https://picsum.photos/300/500" alt="">
+        <img src="https://picsum.photos/300/500?random=5309" alt="">
         <p><a href="edit.html">Edit</a> | <a href="delete.html">Delete</a></p>
       </article>
       <article class="photo-item">
-        <img src="https://picsum.photos/300/500" alt="">
+        <img src="https://picsum.photos/300/500?random=444" alt="">
         <p><a href="edit.html">Edit</a> | <a href="delete.html">Delete</a></p>
       </article>
       <article class="photo-item">
-        <img src="https://picsum.photos/300/500" alt="">
+        <img src="https://picsum.photos/300/500?random=9001" alt="">
         <p><a href="edit.html">Edit</a> | <a href="delete.html">Delete</a></p>
       </article>
       <article class="photo-item">
-        <img src="https://picsum.photos/300/500" alt="">
+        <img src="https://picsum.photos/300/500?random=867" alt="">
         <p><a href="edit.html">Edit</a> | <a href="delete.html">Delete</a></p>
       </article>
     </section>
